--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^10.0.5"
   },
