--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.45.1",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "debounce": "^2.1.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "^14.2.11",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "postcss": "^8",
